--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,6 +33,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Check for changes in Cloud Function source
+        id: check_changes
+        run: |
+          echo "Checking for changes in functions/myspa-etl/"
+          if git diff --quiet HEAD^ HEAD -- functions/myspa-etl; then
+            echo "No changes detected in Cloud Function source."
+            echo "changed=false" >> $GITHUB_OUTPUT
+          else
+            echo "Changes detected."
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
+
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
@@ -41,8 +53,11 @@ jobs:
 
       - name: Setup gcloud
         uses: google-github-actions/setup-gcloud@v2
+        with:
+            project_id: ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Deploy Cloud Function
+        if: steps.check_changes.outputs.changed == 'true'
         run: |
           cd functions/myspa-etl
           gcloud functions deploy myspa-etl \
